--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,16 @@
 # Project information
-site_name: REPO_NAME_OR_SITE_NAME
+site_name: DVC-NER-PROJECT
 # defeine TOC or order of website-
 nav:
   - Home: index.md
 
-site_author: Ankit Marwha
+site_author: Ankit Marwaha
 site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: ankit-world/REPO_NAME
-repo_url: https://github.com/ankit-world/REPO_NAME
+repo_name: ankit-world/DVC-NER-PROJECT
+repo_url: https://github.com/ankit-world/DVC-NER-PROJECT
 
 # Configuration
 theme:
