--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_name: DVC-NER-PROJECT
 # defeine TOC or order of website-
 nav:
   - Home: index.md
+  - Data-ingestion: data_ingestion.md
 
 site_author: Ankit Marwaha
 site_description: >-
